name:                supervise
version:             0.1.0.0
synopsis:            Spawn n threads, handle their results cleanly
description:         Spawn n threads, handle their results cleanly
license-file:        LICENSE
author:              David Johnson
maintainer:          djohnson.m@gmail.com
category:            Concurrency
build-type:          Simple
cabal-version:       >=1.10

library 
  exposed-modules: Concurrency.Supervise        
  hs-source-dirs:  src
  build-depends:       base >=4.7 && <4.8
                     , async 
                     , transformers
  default-language:    Haskell2010
