name:                supervise
version:             0.1.0.0
synopsis:            Spawn n threads, handle their results cleanly
description:         Facilitate the spawning, maintenance and resolution of asynchronous operations running concurrently
license:             BSD3
license-file:        LICENSE
author:              David Johnson
maintainer:          djohnson.m@gmail.com
category:            Concurrency
build-type:          Simple
cabal-version:       >=1.10

library 
  exposed-modules:    Concurrency.Supervise        
  hs-source-dirs:     src
  build-depends:      base >=4.7 && <4.8
                    , async 
                    , transformers
  default-language:   Haskell2010

source-repository head
  type: git
  location: https://github.com/dmjio/supervise                  