name:                app
version:             0.1.0.0
synopsis:            app
description:         app
-- license:             
license-file:        LICENSE
author:              David Johnson
maintainer:          djohnson.m@gmail.com
-- copyright:           
-- category:            
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable app
  main-is:             Main.hs
  build-depends:       base >=4.7 && <4.8
                     , supervise
                     , random
  default-language:    Haskell2010
